--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,8 +26,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+
+    /* 🛡️ Prevención de errores por mayúsculas/minúsculas */
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src"]
 }
-
